Add MIDI support

--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 </head>
 
 <body onload="main()">
-  <div id="mainWrapper">
-
-  </div>
+  <div id="mainWrapper"></div>
   <script type="text/javascript" src="./main.js"></script>
 </body>
 
