--- a/index.html
+++ b/index.html
@@ -6,7 +6,33 @@
 </head>
 
 <body onload="main()">
-  <div id="mainWrapper"></div>
+  <div id="mainWrapper">
+    <div id="js-ynth">
+      <div class="top h-wrapper">
+        <div class="box">
+          <img class="logo" src="img/logo.svg">
+        </div>
+        <div class="box">
+          <input type="file" name="patchFile" accept="text/json" id="synthPatchDialog" class="patchInput">
+          <span id="patchName">Jee</span>
+          <label for="synthPatchDialog">Open</label>
+        </div>
+      </div>
+      <div class="middle h-wrapper">
+        <div class="oscs box">
+          <div class="osc1 unit">
+            
+          </div>
+          <div class="osc2 unit">
+            
+          </div>
+        </div>
+        <div class="amp-env box unit"></div>
+        <div class="filter box unit"></div>
+      </div>
+      <div class="bottom h-wrapper"></div>
+    </div>
+  </div>
   <script type="text/javascript" src="./main.js"></script>
 </body>
 
