Add some patch loading functionality (WIP)

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
         <div class="box">
           <img class="logo" src="img/logo.svg">
         </div>
-        <div class="box">
+        <div class="box patchWrapper">
           <input type="file" name="patchFile" accept="text/json" id="synthPatchDialog" class="patchInput">
-          <span id="patchName">Jee</span>
-          <label for="synthPatchDialog">Open</label>
+          <span id="patchName" class="patchNameField">init patch</span>
+          <label for="synthPatchDialog"><img class="openIcon" src="img/open_icon.svg"></label>
+          <label for="synthPatchDialog"><img class="openIcon" src="img/open_icon.svg"></label>
         </div>
       </div>
       <div class="middle h-wrapper">
